--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -1,8 +1,9 @@
 \chapter{Abbreviations}
 \begin{acronym}
- \acro{USA}{United States of America}
- \acro{NBA}{National Basketball Association}
- \acro{PIN}{Personal Identification Number}
+ \acro{SBN}{Short Baseline Neutrino (Program)}
+ \acro{SBND}{Short Baseline Near Detector}
+ 
+
  
  \acro{MAT}{my abbreviations test}
 \end{acronym} 
