Adding some more to the Energy Reco section

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -1,3 +1,5 @@
 \chapter{Motivaton for Steriles/Neutrino Physics}
 \label{chap:Neutrino Physics}
+\subsection{Overview of Neutrino Physics}
+\subsection{Theory of Sterile Neutrinos}
 Some Physics
