--- a/mythesis.bib
+++ b/mythesis.bib
@@ -64,3 +64,33 @@
    month={Aug},
    pages={P08005–P08005}
 }
+
+@article{ArgoNeuT_electron_lifetime_paper,
+   title="{The ArgoNeuT detector in the NuMI low-energy beam line at Fermilab}",
+   volume={7},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/7/10/P10019},
+   DOI={10.1088/1748-0221/7/10/p10019},
+   number={10},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={Anderson, C and Antonello, M and Baller, B and Bolton, T and Bromberg, C and Cavanna, F and Church, E and Edmunds, D and Ereditato, A and Farooq, S and et al.},
+   year={2012},
+   month={Oct},
+   pages={P10019–P10019}
+}
+
+@article{MicroBooNE_photon_Ereco_paper,
+   title="{Reconstruction and measurement of $\mathcal{O}$(100) MeV energy electromagnetic activity from $\pi^0 \rightarrow \gamma \gamma $ decays in the MicroBooNE LArTPC}",
+   volume={15},
+   ISSN={1748-0221},
+   url={http://dx.doi.org/10.1088/1748-0221/15/02/P02007},
+   DOI={10.1088/1748-0221/15/02/p02007},
+   number={02},
+   journal={Journal of Instrumentation},
+   publisher={IOP Publishing},
+   author={Adams, C. and Alrashed, M. and An, R. and Anthony, J. and Asaadi, J. and Ashkenazi, A. and Balasubramanian, S. and Baller, B. and Barnes, C. and Barr, G. and et al.},
+   year={2020},
+   month={Feb},
+   pages={P02007–P02007}
+}
